# Korea_Chamber_of_Commerve_and_Industry

./: README.md
ACCEL/: frameString  frameString3  testScore  testScore.cpp
ACCEL/algorith/: main  main.bak1  main.bak2  main.bak3  main.bak4  main.bak5  main.bak6  main.cpp
ACCEL/frameString/: frameString  frameString.cpp  frameString2  frameString2.cpp  (+1 more)
DHT11/: DHT11.ino  rcv_dht.py
OpenCV/cppTest/: CMakeLists.txt  arucoMarker.cpp  bilateral.cpp  canny.cpp  color.cpp  colorinrange.cpp  corner.cpp  dnnmnist.cpp  drawLine.cpp  drawPoly.cpp  drawText.cpp  facecascade.cpp  filterEmbossing.cpp  gaussianBlur.cpp  helloOpenCV.cpp  histoEqualization.cpp  hog.cpp  hough.cpp  houghLine.cpp  keypointMatching.cpp  knn.cpp  logical.cpp  mainclass.cpp  makefile  matOp.cpp  matOp2.cpp  mouse.cpp  perspectiveTransform.cpp  qrcode.cpp  saturated.cpp  splitMerge.cpp  threshold.cpp  vecOp.cpp  videoCaption.cpp  warpaffine.cpp
OpenCV/cppTest/pythonTest/: helloOpencv.py  mouse.py  qrcode.py
ROS/src/simple_ros_cpp/: CMakeLists.txt  package.xml
ROS/src/simple_ros_cpp/homework/: package.xml  setup.cfg  setup.py
ROS/src/simple_ros_cpp/homework/homework/: mpub.py  msub.py  msub2.py  mtpub.py  mtsub.py
ROS/src/simple_ros_cpp/include/simple_ros_cpp/: hello_pub_class.hpp
ROS/src/simple_ros_cpp/launch/: hello.launch.py  hello_opencv.launch.py  moveturtlesim.launch.py  service_test.launch.py  service_test_int.launch.py
ROS/src/simple_ros_cpp/src/: hello_pub.cpp  hello_pub_class.cpp  hello_pub_class_method.cpp  hello_pub_lambda.cpp  hello_sub.cpp  hello_sub_opencv.cpp  moveturtlesim.cpp  service_client.cpp  service_client_int.cpp  service_server.cpp  simple_parameter.cpp
ROS/src/user_interface/: CMakeLists.txt  package.xml
ROS/src/user_interface/action/: Fibonacci.action
ROS/src/user_interface/msg/: UserInt.msg
ROS/src/user_interface/srv/: AddAndOdd.srv
artificial_intelligence/: a01_numpy.py  a02_boolindex.py  a03_broadcasting.py  a04_Dot.py  a05_fancyindexing.py  a06_pandas.py  a07_dataframe.py  a08_linear_regrex.py  a09_logistic_regrex.py  default.py
cpp/: add  add.cpp  hello  hello.cpp  name  name.cpp  pointer3  pointer3.cpp  reference  reference_swap  typecast  typecast.cpp
ds/: arrayAssignment  arrayAssignment.c  arrayCompare  arrayCompare.c  pointerAndArray  pointerAndArray.c  pointerAndArray2  pointerAndArray2.c  printDate  printDate.c  returnValue  returnValue.c  sumarray  sumarray.c  swap  swap.c  varianSizeArray.c  varianSizeArray2  varianSizeArray2.c
html/: example1.html  example2.html  example3.html  test01.html  test02.html
mysql/: app.js  delete.html  edit.html  list.html  package-lock.json  package.json  test.txt
python/: README_record.md  a02_nametest.py  a05_print_test.py  a09_int_float.py  a10_variable_definition.py  a11_operator2.py  a12_input_test.py  a13_str_formay.py  a14_string_method.py  a15_boolean.py  a16_find_method.py  a18_datetime.py  a19_summer.py  a20_odd.py  a21_score_print.py  a22_number_analysis.py  a23_list_test.py  a24_list_test2.py  a25_range_for.py  a26_dictionary_test.py  a27_dictionary_test2.py  a28_dictionary_test3.py  a29_while_test.py  a30_list_function.py  a31_enumerate.py  a32_function_test1.py  a33_function_test2.py  a34_exception.py  a35_module_test.py  a36_class_dic.py  a37_class_dic2.py  a38_class_student.py  a39_class_dataclass.py  a40_class_method.py  a41_special_method.py  a42_class_variable.py  a43_class_method.py  a44_destructor.py  a45_class_private.py  a46_property.py  (+12 more)
새 폴더/: LiDAR 구동.ipynb  Untitled.ipynb  Untitled1.ipynb
오토카_코드_JupyterLab/: soda.avi
프로젝트/: 조은성_AutoCar_기초적_장애물회피_포트폴리오.hwp  조은성_SerBot_기초적_트랙주행_포트폴리오.hwp
(+423 files in other folders)
